Logging in dynamo and emails on change

--- a/functions/notify/template.html
+++ b/functions/notify/template.html
@@ -371,12 +371,18 @@
                                 <tr><td style="padding: 5px;"></td></tr>
                                 <tr>
                                     <td style="width: 100px;">
+                                        <nobr><b>Account Name: </b></nobr>
+                                    </td>
+                                        <td>$$ACCOUNT$$</td>
+                                </tr>
+                                <tr>
+                                    <td style="width: 100px;">
                                         <nobr><b>Actual Spend: </b></nobr>
                                     </td>
                                         <td>$$ACTUAL$$</td>
                                 </tr>
                                 <tr>
-                                    <td style="width: 100px;">
+                                    <td style="width: 150px;">
                                         <nobr><b>Forecasted Spend: </b></nobr>
                                     </td>
                                         <td>$$FORECAST$$</td>
